fix: fix scrollbar on mobile devices

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -20,10 +20,6 @@ body {
   font-style: normal;
 }
 
-body {
-  overflow-y: overlay;
-}
-
 body.modal-active {
   overflow-y: hidden;
 }
